cpp/game/game.h

typedef void* tc_game_t;
typedef struct {
    int position;
    int rank_order;
    int score;
    char hand_name[48];
} TcHandResult;
typedef struct {
    int is_special;
    int head[3];
    int middle[5];
    int tail[5];
    TcHandResult head_result;
    TcHandResult middle_result;
    TcHandResult tail_result;
    TcHandResult special_result;
    int utility_score;
} TcArrangement;
typedef struct {
    int player_index;
    int hand[13];
    int head[3];
    int middle[5];
    int tail[5];
    TcHandResult head_result;
    TcHandResult middle_result;
    TcHandResult tail_result;
    TcHandResult special_result;
    int is_special;
    int fouled;
    int homerun;
    int shoot_count;
    int shot_count;
    int round_net_score;
    int total_score;
    uint32_t achievements;
} TcPlayerSettlement;
typedef struct {
    int player_a;
    int player_b;
    int head_cmp;
    int middle_cmp;
    int tail_cmp;
    int winner;
    int base_score;
    int multiplier;
    int final_score;
    int shoot_a;
    int shoot_b;
} TcPairSettlement;
tc_game_t tc_game_create(int player_count);
void tc_game_destroy(tc_game_t game);
int tc_game_start_round(tc_game_t game);
int tc_game_get_phase(tc_game_t game);
int tc_game_get_hand(tc_game_t game, int player, int out_hand13[13]);
int tc_game_is_special(tc_game_t game, int player);
int tc_game_get_special_result(tc_game_t game, int player, TcHandResult* out);
int tc_game_select_card(tc_game_t game, int player, int card_index);
int tc_game_deselect_card(tc_game_t game, int player, int card_index);
int tc_game_add_to_pile(tc_game_t game, int player, int position, int card_index);
int tc_game_remove_from_pile(tc_game_t game, int player, int position, int card_index);
int tc_game_undo(tc_game_t game, int player);
int tc_game_get_card_status(tc_game_t game, int player, int card_index);
int tc_game_get_pile(tc_game_t game, int player, int position, int* out_cards, int capacity);
int tc_game_get_arrangement_status(tc_game_t game, int player);
int tc_game_submit_arrangement(tc_game_t game, int player, int allow_fouled);
int tc_game_recommend_arrangement(tc_game_t game, int player, int strategy, TcArrangement* out);
int tc_game_apply_arrangement(tc_game_t game, int player, const TcArrangement* arrangement);
int tc_game_auto_arrange(tc_game_t game, int player, int strategy);
int tc_game_settle(tc_game_t game);
int tc_game_get_player_settlement(tc_game_t game, int player, TcPlayerSettlement* out);
int tc_game_get_pair_count(tc_game_t game);
int tc_game_get_pair_settlement(tc_game_t game, int pair_index, TcPairSettlement* out);