flutter/lib/src/backend/thirteen/thirteen_ffi.dart

import 'dart:ffi';
import 'dart:io';
import 'package:ffi/ffi.dart';
import 'package:flutter/foundation.dart';

final class TcGameHandResult extends Struct {
  @Int32()
  external int position;
  @Int32()
  external int rankOrder;
  @Int32()
  external int score;
  @Array(48)
  external Array<Uint8> handName;
}

/// Complete-table state machine. No game rule is evaluated in Dart.
final class ThirteenGameSession {
  ThirteenGameSession({required this.playerCount}) {
    final lib = ThirteenCardsFfi.lib;
    _create = lib.lookupFunction<Pointer<Void> Function(Int32),
        Pointer<Void> Function(int)>('tc_game_create');
    _destroy = lib.lookupFunction<Void Function(Pointer<Void>),
        void Function(Pointer<Void>)>('tc_game_destroy');
    _start = lib.lookupFunction<Int32 Function(Pointer<Void>),
        int Function(Pointer<Void>)>('tc_game_start_round');
    _phase = lib.lookupFunction<Int32 Function(Pointer<Void>),
        int Function(Pointer<Void>)>('tc_game_get_phase');
    _getHand = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32, Pointer<Int32>),
        int Function(Pointer<Void>, int, Pointer<Int32>)>('tc_game_get_hand');
    _getPile = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32, Int32, Pointer<Int32>, Int32),
        int Function(
            Pointer<Void>, int, int, Pointer<Int32>, int)>('tc_game_get_pile');
    _getStatus = lib.lookupFunction<Int32 Function(Pointer<Void>, Int32, Int32),
        int Function(Pointer<Void>, int, int)>('tc_game_get_card_status');
    _arrangementStatus = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32),
        int Function(Pointer<Void>, int)>('tc_game_get_arrangement_status');
    _select = lib.lookupFunction<Int32 Function(Pointer<Void>, Int32, Int32),
        int Function(Pointer<Void>, int, int)>('tc_game_select_card');
    _deselect = lib.lookupFunction<Int32 Function(Pointer<Void>, Int32, Int32),
        int Function(Pointer<Void>, int, int)>('tc_game_deselect_card');
    _add = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32, Int32, Int32),
        int Function(Pointer<Void>, int, int, int)>('tc_game_add_to_pile');
    _remove = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32, Int32, Int32),
        int Function(Pointer<Void>, int, int, int)>('tc_game_remove_from_pile');
    _undo = lib.lookupFunction<Int32 Function(Pointer<Void>, Int32),
        int Function(Pointer<Void>, int)>('tc_game_undo');
    _recommend = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32, Int32, Pointer<TcGameArrangement>),
        int Function(Pointer<Void>, int, int,
            Pointer<TcGameArrangement>)>('tc_game_recommend_arrangement');
    _apply = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32, Pointer<TcGameArrangement>),
        int Function(Pointer<Void>, int,
            Pointer<TcGameArrangement>)>('tc_game_apply_arrangement');
    _autoArrange = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32, Int32),
        int Function(Pointer<Void>, int, int)>('tc_game_auto_arrange');
    _submit = lib.lookupFunction<Int32 Function(Pointer<Void>, Int32, Int32),
        int Function(Pointer<Void>, int, int)>('tc_game_submit_arrangement');
    _settle = lib.lookupFunction<Int32 Function(Pointer<Void>),
        int Function(Pointer<Void>)>('tc_game_settle');
    _getPlayerSettlement = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32, Pointer<TcGamePlayerSettlement>),
        int Function(Pointer<Void>, int,
            Pointer<TcGamePlayerSettlement>)>('tc_game_get_player_settlement');
    _pairCount = lib.lookupFunction<Int32 Function(Pointer<Void>),
        int Function(Pointer<Void>)>('tc_game_get_pair_count');
    _getPair = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32, Pointer<TcGamePairSettlement>),
        int Function(Pointer<Void>, int,
            Pointer<TcGamePairSettlement>)>('tc_game_get_pair_settlement');
    _isSpecial = lib.lookupFunction<Int32 Function(Pointer<Void>, Int32),
        int Function(Pointer<Void>, int)>('tc_game_is_special');
    _getSpecialResult = lib.lookupFunction<
        Int32 Function(Pointer<Void>, Int32, Pointer<TcGameHandResult>),
        int Function(Pointer<Void>, int,
            Pointer<TcGameHandResult>)>('tc_game_get_special_result');
    _handle = _create(playerCount);
    if (_handle == nullptr) throw StateError('tc_game_create failed');
  }

  final int playerCount;
  late Pointer<Void> _handle;
  late final Pointer<Void> Function(int) _create;
  late final void Function(Pointer<Void>) _destroy;
  late final int Function(Pointer<Void>) _start, _phase, _settle, _pairCount;
  late final int Function(Pointer<Void>, int, Pointer<Int32>) _getHand;
  late final int Function(Pointer<Void>, int, int, Pointer<Int32>, int)
      _getPile;
  late final int Function(Pointer<Void>, int, int) _getStatus,
      _select,
      _deselect;
  late final int Function(Pointer<Void>, int) _undo, _arrangementStatus;
  late final int Function(Pointer<Void>, int, int, int) _add, _remove;
  late final int Function(Pointer<Void>, int, int, Pointer<TcGameArrangement>)
      _recommend;
  late final int Function(Pointer<Void>, int, Pointer<TcGameArrangement>)
      _apply;
  late final int Function(Pointer<Void>, int, int) _autoArrange, _submit;
  late final int Function(Pointer<Void>, int, Pointer<TcGamePlayerSettlement>)
      _getPlayerSettlement;
  late final int Function(Pointer<Void>, int, Pointer<TcGamePairSettlement>)
      _getPair;
  late final int Function(Pointer<Void>, int) _isSpecial;
  late final int Function(Pointer<Void>, int, Pointer<TcGameHandResult>)
      _getSpecialResult;
  final Pointer<Int32> _cards = calloc<Int32>(13);
  bool _disposed = false;

  void _check(int rc, String operation) {
    if (rc < 0) throw StateError('$operation failed: $rc');
  }

  int get phase => _phase(_handle);
  void startRound() => _check(_start(_handle), 'tc_game_start_round');
  List<int> hand(int player) {
    _check(_getHand(_handle, player, _cards), 'tc_game_get_hand');
    return [for (var i = 0; i < 13; i++) _cards[i]];
  }

  List<int> pile(int player, int position) {
    final n = _getPile(_handle, player, position, _cards, 13);
    _check(n, 'tc_game_get_pile');
    return [for (var i = 0; i < n; i++) _cards[i]];
  }

  int cardStatus(int player, int index) => _getStatus(_handle, player, index);
  int arrangementStatus(int player) => _arrangementStatus(_handle, player);
  bool isSpecial(int player) => _isSpecial(_handle, player) != 0;
  ({String name, int score}) getSpecialResult(int player) {
    final out = calloc<TcGameHandResult>();
    try {
      _check(_getSpecialResult(_handle, player, out),
          'tc_game_get_special_result');
      return (
        name: _tcFixedString(out.ref.handName, 48),
        score: out.ref.score,
      );
    } finally {
      calloc.free(out);
    }
  }
  void select(int p, int i) =>
      _check(_select(_handle, p, i), 'tc_game_select_card');
  void deselect(int p, int i) =>
      _check(_deselect(_handle, p, i), 'tc_game_deselect_card');
  void addToPile(int p, int pos, int i) =>
      _check(_add(_handle, p, pos, i), 'tc_game_add_to_pile');
  void removeFromPile(int p, int pos, int i) =>
      _check(_remove(_handle, p, pos, i), 'tc_game_remove_from_pile');
  void undo(int p) => _check(_undo(_handle, p), 'tc_game_undo');
  Map<String, dynamic> recommend(int p, int strategy) {
    final out = calloc<TcGameArrangement>();
    try {
      _check(_recommend(_handle, p, strategy, out),
          'tc_game_recommend_arrangement');
      return _arrangementMap(out.ref);
    } finally {
      calloc.free(out);
    }
  }

  void apply(int p, Map<String, dynamic> value) {
    final a = calloc<TcGameArrangement>();
    try {
      _writeArrangement(a.ref, value);
      _check(_apply(_handle, p, a), 'tc_game_apply_arrangement');
    } finally {
      calloc.free(a);
    }
  }

  void autoArrange(int p, int strategy) =>
      _check(_autoArrange(_handle, p, strategy), 'tc_game_auto_arrange');
  void submit(int p, {bool allowFouled = false}) => _check(
      _submit(_handle, p, allowFouled ? 1 : 0), 'tc_game_submit_arrangement');
  void settle() => _check(_settle(_handle), 'tc_game_settle');
  Map<String, dynamic> playerSettlement(int p) {
    final out = calloc<TcGamePlayerSettlement>();
    try {
      _check(_getPlayerSettlement(_handle, p, out),
          'tc_game_get_player_settlement');
      final v = out.ref;
      return {
        'player': v.playerIndex,
        'hand': [for (var i = 0; i < 13; i++) v.hand[i]],
        'head': [for (var i = 0; i < 3; i++) v.head[i]],
        'middle': [for (var i = 0; i < 5; i++) v.middle[i]],
        'tail': [for (var i = 0; i < 5; i++) v.tail[i]],
        'head_result': _tcResultMap(v.headResult),
        'middle_result': _tcResultMap(v.middleResult),
        'tail_result': _tcResultMap(v.tailResult),
        'special_result': _tcResultMap(v.specialResult),
        'is_special': v.isSpecial != 0,
        'fouled': v.fouled != 0,
        'homerun': v.homerun != 0,
        'shoot_count': v.shootCount,
        'shot_count': v.shotCount,
        'net': v.roundNetScore,
        'total': v.totalScore,
        'achievements': v.achievements,
      };
    } finally {
      calloc.free(out);
    }
  }

  List<Map<String, dynamic>> pairSettlements() {
    final n = _pairCount(_handle);
    _check(n, 'tc_game_get_pair_count');
    final out = calloc<TcGamePairSettlement>();
    try {
      return [
        for (var i = 0; i < n; i++)
          ...() {
            _check(_getPair(_handle, i, out), 'tc_game_get_pair_settlement');
            final v = out.ref;
            return [
              {
                'a': v.playerA,
                'b': v.playerB,
                'head_cmp': v.headCmp,
                'middle_cmp': v.middleCmp,
                'tail_cmp': v.tailCmp,
                'winner': v.winner,
                'base_score': v.baseScore,
                'multiplier': v.multiplier,
                'final_score': v.finalScore,
                'shoot_a': v.shootA != 0,
                'shoot_b': v.shootB != 0
              }
            ];
          }()
      ];
    } finally {
      calloc.free(out);
    }
  }

  void dispose() {
    if (_disposed) return;
    _disposed = true;
    _destroy(_handle);
    _handle = nullptr;
    calloc.free(_cards);
  }

  static Map<String, dynamic> _arrangementMap(TcGameArrangement v) => {
        'is_special': v.isSpecial != 0,
        'head': [for (var i = 0; i < 3; i++) v.head[i]],
        'middle': [for (var i = 0; i < 5; i++) v.middle[i]],
        'tail': [for (var i = 0; i < 5; i++) v.tail[i]],
        'head_result': _tcResultMap(v.headResult),
        'middle_result': _tcResultMap(v.middleResult),
        'tail_result': _tcResultMap(v.tailResult),
        'special_result': _tcResultMap(v.specialResult),
        'utility_score': v.utilityScore
      };
  static void _writeArrangement(TcGameArrangement a, Map<String, dynamic> v) {
    a.isSpecial = v['is_special'] == true ? 1 : 0;
    final h = (v['head'] as List).cast<int>(),
        m = (v['middle'] as List).cast<int>(),
        t = (v['tail'] as List).cast<int>();
    for (var i = 0; i < 3; i++) a.head[i] = h[i];
    for (var i = 0; i < 5; i++) {
      a.middle[i] = m[i];
      a.tail[i] = t[i];
    }
  }
}

final class TcGameArrangement extends Struct {
  @Int32()
  external int isSpecial;
  @Array(3)
  external Array<Int32> head;
  @Array(5)
  external Array<Int32> middle;
  @Array(5)
  external Array<Int32> tail;
  external TcGameHandResult headResult;
  external TcGameHandResult middleResult;
  external TcGameHandResult tailResult;
  external TcGameHandResult specialResult;
  @Int32()
  external int utilityScore;
}
